--- a/musclepedia/app/views/help.scala.html
+++ b/musclepedia/app/views/help.scala.html
@@ -1,31 +1,5 @@
 @start("Musclepedia"){
     <script src="@routes.Assets.at("javascripts/bmi.js")" type="text/javascript"></script>
-    <div class="col-md-8">
-        <ul class="nav nav-tabs">
-            <li class><a href="/start">Home</a></li>
-            <li class="dropdown" >
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
-                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
-                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
-                    <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li> <a>Anfänger</a></li>
-                    <li> <a>Fortgeschritten </a></li>
-                    <li> <a>Profis </a></li>
-                </ul>
-            </li>
-            <li role="presentation" class><a href="/profil">Profil</a></li>
-            <li role="presentation" class><a href="/studios">Studios</a></li>
-            <li role="presentation" class="active"><a href="/help">Hilfe</a></li>
-            <li role="presentation" class><a href="/">Logout</a></li>
-        </ul>
-        <br>
     <div class="row text-left">
         <div class="col-md-8" id="helppage">
             <p class="erklaerung">Wilkommen auf Musclepedia die Seite rund um Fitness! Unter Übungen kannst du Übungen jeder Art ansehen und zu deinen Persönlichen Trainingsplan hinzufügen.
@@ -37,35 +11,33 @@
             <div role="tabpanel">
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active"><a href="#bmire" role="tab" data-toggle="tab">BMI-Rechner </a> </li>
-                    <li role="presentation"><a href="ä#kalre"role="tab" data-toggle="tab">Kalorinrechner</a> </li>
+                    <li role="presentation"><a href="ä#kalre"role="tab" data-toggle="tab">Kalorienrechner</a> </li>
                 </ul>
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="bmire">
-            <h3>BMI Rechner </h3>
-            <p> ACHTUNG BMI kann nicht zwischen Muskeln und Fett unterscheiden! Daher soll man vorsichtig bei der Auswertung der Ergebnisse sein!</p>
-            <p><input type="text" id="gew" placeholder="150"/>Gewicht </p>
-            <p><input type="text" id="gro" placeholder="1,X"/>Größe </p>
-            <select id="gesch">
-                <option>männlich</option>
-                <option>weiblich</option>
-            </select>
-            <p>Überprüfe bitte alle Angaben <input type="button" onclick="javascript:bmirechnen()" value="BMI berechnen"></p>
-            <div id="bmierg"></div>
-        </div>
+                        <h3>BMI Rechner </h3>
+                        <p> ACHTUNG BMI kann nicht zwischen Muskeln und Fett unterscheiden! Daher soll man vorsichtig bei der Auswertung der Ergebnisse sein!</p>
+                        <p><input type="number" id="gewicht" placeholder="150"/>Gewicht </p>
+                        <p><input type="number" id="groesse" placeholder="1.X"/>Größe </p>
+                        <select id="gesch">
+                            <option>männlich</option>
+                            <option>weiblich</option>
+                        </select>
+                        <p>Überprüfe bitte alle Angaben <input type="button" onclick="javascript:bmirechnen()" value="BMI berechnen"></p>
+                        <div id="bmierg"></div>
+                    </div>
                     <div role="tabpanel" class="tab-pane" id="kalre">
                         <h3>Keine Ahnung was hier kommen soll</h3>
                         <p> habe weder eine Idee was das hier eigentlich ist noch was für ne Formel notwendig wäre!</p>
-
                     </div>
                 </div>
 
             </div>
-            </div>
+        </div>
         <script type="text/javascript">
             $(document).ready(function ($) {
                 $('#myTab').tab();
               });
-    	</script>
+        </script>
     </div>
-
 }
