--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -6,17 +6,18 @@
     <head>
         <title>@title</title>
         <meta charset="utf-8"/>
-        <script src="@routes.Assets.at("javascripts/jquery-1.11.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="@routes.Assets.at("javascripts/init.js")"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/loginpage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/loginpage.css")">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </head>
     <body>
         <header class="text-center">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 img_login">
+                <div class="col-md-8 col-md-offset-2" id="login_img">
                     <h1>Musclepedia</h1>
                     <h2>Starkes Wissen rund um Fitness</h2>
                 </div>
@@ -42,13 +43,37 @@
                 <!-- Quotes -->
 
                 <!-- Menue -->
-                    <div>@content</div>
-
+                <div class="col-md-8">
+                    <ul class="nav nav-tabs">
+                        <li><a href="/start">Home</a></li>
+                        <li class="dropdown" >
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="presentation"> <a href="/uebungen_oberkoerper"> Oberkörper</a> </li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
+                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li> <a>Anfänger</a></li>
+                                <li> <a>Fortgeschritten </a></li>
+                                <li> <a>Profis </a></li>
+                            </ul>
+                        </li>
+                        <li role="presentation"><a href="/profil">Profil</a></li>
+                        <li role="presentation"><a href="/studios">Studios</a></li>
+                        <li role="presentation"><a href="/help">Hilfe</a></li>
+                        <li role="presentation"><a href="/">Logout</a></li>
+                    </ul>
+                    <br>
                 <!-- Menue -->
+                <div>@content</div>
                 <div class="col-md-2"></div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        </div>
     </body>
 </html>
