--- a/musclepedia/app/views/start.scala.html
+++ b/musclepedia/app/views/start.scala.html
@@ -51,17 +51,17 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"> <a role="menuitem" href="/uebungen_oberkoerper"> Oberkörper</a> </li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_arme"> Arme </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_beine"> Beine </a></li>
-                                <li role="presentation"> <a role="menuitem" tabindex="-1" href="/uebungen_bauch"> Bauch </a></li>
+                                <li role="presentation"> <a role="menuitem" href="/uebungen_arme"> Arme </a></li>
+                                <li role="presentation"> <a role="menuitem" href="/uebungen_beine"> Beine </a></li>
+                                <li role="presentation"> <a role="menuitem" href="/uebungen_bauch"> Bauch </a></li>
                             </ul>
                         </li>
                         <li class="dropdown" id="plaene">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li> <a>Anfänger</a></li>
-                                <li> <a>Fortgeschritten </a></li>
-                                <li> <a>Profis </a></li>
+                            <a hsref="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="presentation"> <a role="menuitem" href="/plaene_anfaenger">Anfänger</a></li>
+                                <li role="presentation"> <a role="menuitem" href="/plaene_fortgesch">Fortgeschritten </a></li>
+                                <li role="presentation"> <a role="menuitem" href="/plaene_profi">Profis </a></li>
                             </ul>
                         </li>
                         <li role="presentation" id="profil"><a href="/profil">Profil</a></li>
