--- a/musclepedia/app/views/login.scala.html
+++ b/musclepedia/app/views/login.scala.html
@@ -10,10 +10,12 @@
                     <form method="get" action="/start">
                         <div class="form-group">
                             <h3>Login</h3>
-                            <label for="name1">Benutzername</label>
-                            <input id="name1" class="form-control" type="text" placeholder="Name"/>
-                            <label for="pass1">Passwort</label>
-                            <input id="pass1" class="form-control" type="password" placeholder="Passwort"/>
+                            <label for="logName">Benutzername</label>
+                            <input id="logName" class="form-control" type="text" placeholder="Name"/>
+
+                            <label for="logPass">Passwort</label>
+                            <input id="logPass" class="form-control" type="password" placeholder="Passwort"/>
+
                             <br/>
                             <input type="submit" class="btn btn-primary" name="login" value="Login"/>
                         </div>
@@ -23,14 +25,17 @@
                     <form method="get" action="/benutzer_anlegen" name="regForm" onsubmit="return validateForm() ">
                         <div class="form-group">
                             <h3>Registrieren</h3>
-                            <label for="name2">Benutzername</label>
-                            <input id="name2" name="benutzername" class="form-control" type="text" placeholder="Benutzername"/>
-                            <label for="pass2">Passwort</label>
-                            <input id="pass3" name="passwort" class="form-control" type="password" placeholder="Passwort"/>
-                            <label for="pass3">Passwort wiederholen</label>
-                            <input class="form-control" type="password" name="passwort2" placeholder="Passwort wiederholen"/>
-                            <label for="email">Email-Adresse</label>
-                            <input id="email" class="form-control" type="email" name="mail" placeholder="E-Mail Adresse"/>
+                            <label for="regName">Benutzername</label>
+                            <input id="regName" name="benutzername" class="form-control" type="text" placeholder="Benutzername"/>
+
+                            <label for="regPass">Passwort</label>
+                            <input id="regPass" name="passwort" class="form-control" type="password" placeholder="Passwort"/>
+
+                            <label for="regPass2">Passwort wiederholen</label>
+                            <input id="regPass2" class="form-control" type="password" name="passwort2" placeholder="Passwort wiederholen"/>
+
+                            <label for="regEmail">Email-Adresse</label>
+                            <input id="regEmail" class="form-control" type="email" name="mail" placeholder="E-Mail Adresse"/>
                             <br/>
                             <input type="submit" class="btn btn-primary" name="registrieren" value="Registrieren"/>
                         </div>
